@@ -12,7 +12,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: heur_subnlp.c,v 1.53 2011/01/02 11:10:46 bzfheinz Exp $"
+#pragma ident "@(#) $Id: heur_subnlp.c,v 1.54 2011/01/07 10:54:26 bzfviger Exp $"
 
 /**@file    heur_subnlp.c
  * @ingroup PRIMALHEURISTICS
@@ -1492,6 +1492,7 @@ SCIP_RETCODE SCIPapplyHeurSubNlp(
       }
       cutoff = MIN(upperbound, cutoff);
       SCIP_CALL( SCIPsetObjlimit(heurdata->subscip, cutoff) );
+      SCIPdebugMessage("set objective limit %g\n", cutoff);
    }
    else
       cutoff = SCIPinfinity(scip);
@@ -1512,7 +1513,7 @@ SCIP_RETCODE SCIPapplyHeurSubNlp(
       if( heurdata->subscipisvalid && SCIPgetNActivePricers(scip) == 0 )
       {
          /* if the subNLP is valid and turned out to be globally infeasible (i.e., proven by SCIP), then we forbid this fixation in the main problem */
-         if( !SCIPisInfinity(scip, cutoff) && heurdata->forbidfixings )
+         if( SCIPisInfinity(scip, cutoff) && heurdata->forbidfixings )
          {
             SCIP_CALL( forbidFixation(scip, heurdata) );
          }
